# engram

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: cd.yml.disabled  ci.yml.disabled  deploy-research.yml  regression.yml.disabled
config/: benchmark.toml  claude_desktop_config.example.json  engram.toml  ensemble.toml  gemini-primary.toml  gpt4o-primary.toml  gpt52-primary.toml
crates/engram-agent/: Cargo.toml
crates/engram-agent/src/: agent.rs  config.rs  error.rs  hook.rs  lib.rs  tool.rs  types.rs
crates/engram-agent/src/memory/: gates.rs  mod.rs  runner.rs  tool_adapter.rs
crates/engram-ai/: Cargo.toml  pending_batch.txt  saved_answers.json  saved_answers_baseline.json  saved_answers_v2.json
crates/engram-ai-core/: Cargo.toml
crates/engram-ai-core/src/: error.rs  lib.rs  memory_system.rs
crates/engram-ai-core/src/agent/: date_parsing.rs  mod.rs  prompting.rs  strategy.rs  tool_schemas.rs  tool_types.rs  tools.rs
crates/engram-ai-core/src/api/: auth.rs  metrics.rs  mod.rs  types.rs
crates/engram-ai-core/src/api/mcp/: handler.rs  mod.rs  stdio.rs  types.rs
crates/engram-ai-core/src/config/: mod.rs  settings.rs
crates/engram-ai-core/src/embedding/: mod.rs  provider.rs  remote.rs
crates/engram-ai-core/src/extraction/: api_config.rs  api_extractor.rs  batch_client.rs  batch_extractor.rs  context.rs  entity_extractor.rs  entity_registry.rs  entity_types.rs  extractor.rs  mod.rs  relationships.rs  temporal_parser.rs  types.rs
crates/engram-ai-core/src/llm/: client.rs  config.rs  mod.rs  traits.rs  types.rs
crates/engram-ai-core/src/retrieval/: channel.rs  confidence.rs  decomposer.rs  engine.rs  entity.rs  executor.rs  fusion.rs  keyword.rs  mod.rs  query_analyzer.rs  semantic.rs  temporal.rs  temporal_context.rs  temporal_filter.rs  temporal_scoring.rs
crates/engram-ai-core/src/storage/: audit.rs  config.rs  database.rs  mod.rs  qdrant.rs  session_store.rs  sqlite_config.rs  surrealdb_graph.rs
crates/engram-ai-core/src/types/: entity.rs  enums.rs  memory.rs  mod.rs  session.rs
crates/engram-ai-core/tests/: debug_retrieval.rs  integration_qdrant.rs
crates/engram-ai/examples/: basic_usage.rs
crates/engram-ai/src/: lib.rs
crates/engram-bench/: Cargo.toml
crates/engram-bench/src/: error.rs  lib.rs  storage.rs  types.rs
crates/engram-bench/src/longmemeval/: batch_runner.rs  benchmark_config.rs  gates.rs  harness.rs  judge.rs  mod.rs  recall_harness.rs  tool_adapter.rs
crates/engram-bench/src/longmemeval/answerer/: config.rs  mod.rs  prompting.rs  reduction.rs  strategy.rs  tests.rs  types.rs
crates/engram-bench/src/longmemeval/ingester/: batch.rs  config.rs  mod.rs  stats.rs
crates/engram-bench/src/longmemeval/tools/: context.rs  date_parsing.rs  graph.rs  mod.rs  schemas.rs  search.rs  tests.rs  types.rs
crates/engram-bench/tests/: integration_benchmark.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: main.rs
crates/engram-server/: Cargo.toml
crates/engram-server/src/: error.rs  lib.rs  main.rs  mcp.rs  state.rs
crates/engram-server/src/middleware/: auth.rs  mod.rs  request_id.rs  request_metrics.rs
crates/engram-server/src/routes/: delete.rs  get_memory.rs  health.rs  ingest.rs  list.rs  mcp_http.rs  messages.rs  metrics.rs  mod.rs  search.rs
crates/engram-server/tests/: integration_tests.rs  validation_tests.rs
crates/engram-server/tests/common/: mod.rs
data/longmemeval/: abstention_30.txt  all_58_failures_enriched.json  fail_58.txt  fast_60.txt  fixcheck_81.txt  gate_231.txt  gemini31pro_48_failures.json  gemini_vs_gpt4o_movement.json  gpt52_vs_gemini_movement.json  missing_51.txt  p12_p15_targeted.txt  p22_ensemble_33_failures.json  p22_ensemble_test_24.txt  p30_ms_failures_15.txt  regcheck_150.txt  targeted_judge_pnewc.txt  temporal_38.txt  temporal_forensics_enriched.json
docs/: agent-framework.md  agent-unification-plan.md  api-reference.md  concepts.md  configuration.md  deployment.md  docusaurus.config.ts  getting-started.md  index.md  limitations.md  mcp-integration.md  package-lock.json  package.json  rust-sdk.md  sidebars.ts
research/: 00-glossary.md  docusaurus.config.ts  package-lock.json  package.json  reading-guide.md  server-roadmap.md  sidebars.ts
research/01-context/: _category_.json  benchmark-overview.md  competitive-landscape.md  hindsight.md  honcho.md  index.md  mastra-om.md
research/02-architecture/: _category_.json  index.md  key-decisions.md  pipeline-analysis.md
research/03-journey/: _category_.json  index.md  phase-1-baseline.md  phase-10-gpt52-ensemble.md  phase-11-inverted-ensemble.md  phase-2-agentic.md  phase-3-full-benchmark.md  phase-4-clean-data.md  phase-5-the-ceiling.md  phase-6-model-upgrade.md  phase-7-ensemble.md  phase-8-productionization.md  phase-9-architecture-review.md
research/04-forensics/: _category_.json  category-breakdown.md  index.md  retrieval-audit.md  temporal-analysis.md
research/05-dead-ends/: _category_.json  deterministic-postprocessing.md  engineering-discipline.md  gate-engineering.md  graph-tools.md  index.md
research/06-lessons/: _category_.json  index.md  ingestion-vs-reasoning.md  path-to-90-percent.md  path-to-95-percent.md  single-model-architecture.md  what-moves-the-score.md
research/appendices/: _category_.json  benchmark-history.md  execution-log.md  index.md  onnx-reranker.md  papers.md  restructuring-plan.md
research/appendices/codex-prompts/: 20260215_diagnostic_report.md  index.md
research/codex_prompts/: 20260215_improvement_plan.md  20260215_temporal_diagnostic.md
research/src/components/: CategoryBreakdown.module.css  CategoryBreakdown.tsx  Hero.module.css  Hero.tsx  Leaderboard.module.css  Leaderboard.tsx  PhaseTimeline.module.css  PhaseTimeline.tsx  ReadingGuide.module.css  ReadingGuide.tsx  SectionDivider.module.css  SectionDivider.tsx  StatsGrid.module.css  StatsGrid.tsx
research/src/css/: custom.css
research/src/data/: benchmarkData.ts
scripts/: setup-qdrant.sh
(+3 files in other folders)
