[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/nexusentis/engram"
homepage = "https://engram.nexusentis.ie/research/"
authors = ["Federico Rinaldi"]
keywords = ["llm", "memory", "agent", "rag", "qdrant"]
categories = ["science", "database"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Vector database
qdrant-client = "1.7"

# LLM clients
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"], default-features = false }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Configuration
config = "0.14"
toml = "0.8"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.13"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID (v7 for time-sortable)
uuid = { version = "1.6", features = ["v7", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Utilities
once_cell = "1.19"
rand = "0.8"

# Async trait support
async-trait = "0.1"

# Regex
regex = "1.10"

# OpenAPI documentation
utoipa = { version = "5", features = ["chrono", "uuid"] }

# SurrealDB - persistent knowledge graph
surrealdb = { version = "2.6", default-features = false, features = ["kv-rocksdb", "kv-mem"] }

# Testing
tokio-test = "0.4"
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
