[package]
name = "engram-ai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for the Engram AI agent memory system"

[features]
default = ["graph", "metrics"]
graph = ["dep:surrealdb"]
metrics = ["dep:prometheus"]
test-helpers = []

[dependencies]
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
qdrant-client.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
config.workspace = true
toml.workspace = true
async-trait.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
once_cell.workspace = true
rand.workspace = true
utoipa.workspace = true

# Optional dependencies
surrealdb = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
