[package]
name = "engram-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust-native AI agent memory system — #1 on LongMemEval-S (95.8%)"

[features]
default = ["graph", "metrics"]
graph = ["engram-core/graph"]
metrics = ["engram-core/metrics"]

[dependencies]
engram-core = { package = "engram-ai-core", path = "../engram-ai-core", version = "0.1.0", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test.workspace = true
tempfile.workspace = true
