[package]
name = "engram-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Benchmark harness for Engram memory system (LongMemEval-S)"
publish = false

[dependencies]
engram = { package = "engram-ai", path = "../engram-ai", version = "0.2.1", features = ["graph", "metrics"] }
engram-agent = { path = "../engram-agent", version = "0.2.1", features = ["memory"] }

tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
toml.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
async-trait.workspace = true
qdrant-client.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
