[package]
name = "engram-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "REST and MCP server for the Engram AI agent memory system"

[lib]
name = "engram_server"
path = "src/lib.rs"

[[bin]]
name = "engram-server"
path = "src/main.rs"

[dependencies]
engram-core = { package = "engram-ai-core", path = "../engram-ai-core", version = "0.1.0" }

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# CLI
clap.workspace = true

# Configuration
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Date/time
chrono.workspace = true

# UUID
uuid.workspace = true

# Vector database (for Filter/Condition types in message search)
qdrant-client.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# OpenAPI
utoipa.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tokio = { workspace = true, features = ["macros", "test-util"] }
engram-core = { package = "engram-ai-core", path = "../engram-ai-core", version = "0.1.0", features = ["test-helpers"] }
